--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,5 +44,9 @@
   <!-- Using Font-awesome in HTML -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
+  <!-- Google Analytics -->
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include google-analytics.html %}
+  {% endif %}
 
 </head>
